Indirect lighting with RSM. Currently using neighboring RSM texels as indirect light source samples.

--- a/ReflectiveShadowMap/ReflectiveShadowMap.vcxproj
+++ b/ReflectiveShadowMap/ReflectiveShadowMap.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="OrbitCamera.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="ReflectiveShadowMap.h" />
+    <ClInclude Include="Sampler.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="UploadBuffer.h" />
     <ClInclude Include="Win32InputHandler.h" />
@@ -179,6 +180,7 @@
     <ClCompile Include="OrbitCamera.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="ReflectiveShadowMap.cpp" />
+    <ClCompile Include="Sampler.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Win32InputHandler.cpp" />
     <ClCompile Include="Win32Window.cpp" />
@@ -195,6 +197,18 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</DeploymentContent>
     </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="test.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
