--- a/ReflectiveShadowMap/ReflectiveShadowMap.vcxproj.filters
+++ b/ReflectiveShadowMap/ReflectiveShadowMap.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="DescriptorHeap.h">
       <Filter>Render</Filter>
     </ClInclude>
+    <ClInclude Include="Sampler.h">
+      <Filter>Render</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Color.cpp">
@@ -136,10 +139,18 @@
     <ClCompile Include="DescriptorHeap.cpp">
       <Filter>Render</Filter>
     </ClCompile>
+    <ClCompile Include="Sampler.cpp">
+      <Filter>Render</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="shaders.hlsl">
       <Filter>Shader</Filter>
     </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="test.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
